--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.2.3",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.1.1",
+    "webrtc-adapter": "^7.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
